--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <header>
-        
+        <h1>lucasgabwi</h1>
     </header>
+
+    <hr>
+
+    <main>
+        <section class=""></section>
+    </main>
 </body>
 </html>
