--- a/index.html
+++ b/index.html
@@ -6,14 +6,51 @@
     <title>HTML CV Project by lucasgabwi</title>
 </head>
 <body>
-    <header>
-        <h1>lucasgabwi</h1>
-    </header>
-
     <hr>
 
     <main>
-        <section class=""></section>
+        <section class="about__me">
+            <h1>Lucas Gabriel Witchemichen</h1>
+            <h3>Junior Frontend Developer</h3>
+            <p>I have Autism Spectrum Disorder (ASD) and I'm level 1 support.</p>
+            <address>
+                2230 Presidente Zacarias de Goes Street<br>
+                Guarapuava - PR, Brazil 85015<br>
+                <a href="tel:+5542988442535">+55 (42) 98844-2535</a>
+                <a href="mailto:contatolucasgab.wi@gmail.com">contatolucasgab.wi@gmail.com</a>
+            </address>
+        </section>
+
+        <section class="my__skills">
+            <h2>My Skills</h2>
+            <ul class="technologies">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+        </section>
+
+        <section class="my__education">
+            <h2>Education</h2>
+            <h3>Colégio Estadual Professor Amarílio, Guarapuava - 7th grade</h3>
+            <p>February 2023 to December 2026</p>
+            <p>I do not any things.</p>
+            <p>I don't have another education.</p>
+        </section>
+
+        <section class="my__experience">
+            <h2>My Experience</h2>
+            <p>I don't have any experience.</p>
+        </section>
+
+        <section class="across__the__internet">
+            <h2>Across the Internet</h2>
+            <a href="https://github.com/lucasgabwi">GitHub</a>
+            <a href="https://www.instagram.com/lugab61">Instagram</a>
+            <a href="https://www.youtube.com/@DesenvolvedorateoFim">YouTube</a>
+        </section>
     </main>
+
+    <hr>
 </body>
 </html>
