--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A HTML CV Project with HTML.">
+    <meta name="author" content="Lucas Gabriel Witchemichen (lucasgabwi)">
+    <meta name="keywords" content="HTML CV Project, CV Project, Lucas Gabriel Witchemichen, HTML CV Project by lucasgabwi, lucasgabwi, html cv project, cv project, lucas gabriel witchemichen html cv project by lucasgabwi">
     <title>HTML CV Project by lucasgabwi</title>
 </head>
 <body>
+    <h1>HTML CV Project by lucasgabwi</h1>
+
     <hr>
 
     <main>
         <section class="about__me">
-            <h1>Lucas Gabriel Witchemichen</h1>
+            <h2>Lucas Gabriel Witchemichen</h2>
             <h3>Junior Frontend Developer</h3>
             <p>I have Autism Spectrum Disorder (ASD) and I'm level 1 support.</p>
             <address>
