--- a/index.html
+++ b/index.html
@@ -57,5 +57,9 @@
     </main>
 
     <hr>
+
+    <footer>
+        <p>&copy; 2024 lucasgabwi for <a href="https://roadmap.sh">roadmap.sh</a></p>
+    </footer>
 </body>
 </html>
